--- a/Assessment-3/test-output/index.html
+++ b/Assessment-3/test-output/index.html
@@ -108,12 +108,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rest.REST_Part2" class="method navigator-link" hash-for-method="test_Ids(3)">test_Ids(3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rest.REST_Part2" class="method navigator-link" hash-for-method="test_Ids(1)">test_Ids(1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rest.REST_Part2" class="method navigator-link" hash-for-method="test_Ids(1)">test_Ids(1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rest.REST_Part2" class="method navigator-link" hash-for-method="test_Ids(3)">test_Ids(3)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -144,18 +144,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test_Ids(3)">
-                  </a> <!-- test_Ids(3) -->
-                  <span class="method-name">test_Ids</span>
-                  <span class="parameters">(3)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="test_Ids(1)">
                   </a> <!-- test_Ids(1) -->
                   <span class="method-name">test_Ids</span>
                   <span class="parameters">(1)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_Ids(3)">
+                  </a> <!-- test_Ids(3) -->
+                  <span class="method-name">test_Ids</span>
+                  <span class="parameters">(3)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--831960875/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--1785656070/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,11 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;rest.REST_Part2&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;test_Ids&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- rest.REST_Part2 --&gt;
+      &lt;class name=&quot;rest.REST_Part2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,15 +216,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test_Ids')
 data.setCell(0, 2, 'rest.REST_Part2')
-data.setCell(0, 3, 1173);
+data.setCell(0, 3, 1256);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test_Ids')
 data.setCell(1, 2, 'rest.REST_Part2')
-data.setCell(1, 3, 44);
+data.setCell(1, 3, 48);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test_Ids')
 data.setCell(2, 2, 'rest.REST_Part2')
-data.setCell(2, 3, 43);
+data.setCell(2, 3, 47);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -266,11 +262,11 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test_Ids(2)</span>
-                <span class="method-start">1176 ms</span>
+                <span class="method-start">1258 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test_Ids(3)</span>
-                <span class="method-start">1221 ms</span>
+                <span class="method-start">1306 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
